preliminary full version

--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
                             <li>дешевый транспорт</li>
                             <li>красивый город.</li>
                         </ul>
+                        <div class="stories-card-actions">
+                            <button class="text-button stories-bt p-big">Подробнее </button>
+                            <div class="stories-links">
+                                <div class="stories-link p-med">instagram</div>
+                                <div class="stories-link p-med">facebook</div>
+                                <div class="stories-link p-med">Youtube</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="stories-card">
@@ -228,6 +236,13 @@
                     <div class="stories-card-content">
                         <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
                         <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                        <div class="stories-card-actions">
+                            <button class="text-button stories-bt p-big">Подробнее </button>
+                            <div class="stories-links">
+                                <div class="stories-link p-med">instagram</div>
+                                <div class="stories-link p-med">ВКонтакте</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="stories-card">
@@ -235,33 +250,45 @@
                     <div class="stories-card-content">
                         <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
                         <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                        <div class="stories-card-actions">
+                            <button class="text-button stories-bt p-big">Подробнее </button>
+                            <div class="stories-links">
+                                <div class="stories-link p-med">instagram</div>
+                                <div class="stories-link p-med">facebook</div>
+                                <div class="stories-link p-med">ВКонтакте</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <p style="height: 200px">
-            contacts
-        </p>
-    </main>
-    <footer>
-        <div id="footer-menu">
-            <p id="footer-title" class="p-med">Наши социальные сети</p>
-            <div id="footer-links">
-                <footer-lc>
-                    <img src="/instagram.svg" width="14" height="14" alt="instagram logo"/>
-                    <footer-link class="p-med">instagram</footer-link>
-                </footer-lc>
-                <footer-lc>
-                    <img src="/facebook.svg" width="8" height="17" alt="facebook logo"/>
-                    <footer-link class="p-med">facebook</footer-link>
-                </footer-lc>
-                <footer-lc>
-                    <img src="/vk.svg" width="20" height="12" alt="vkontakte logo"/>
-                    <footer-link class="p-med">vkontakte</footer-link>
-                </footer-lc>
+        <div id="contacts-container">
+            <div id="contacts-splash"></div>
+            <div id="contacts-text">
+                <div class="t-h3" id="contacts-ad">Пора в путешествие вместе с нами!</div>
+                <span class="p-med" id="contacts-p">Напиши на почту и узнай подробности на <span id="contacts-link">yourtour@gmail.com</span> </span>
             </div>
         </div>
-    </footer>
+        <footer>
+            <div id="footer-menu">
+                <p id="footer-title" class="p-med">Наши социальные сети</p>
+                <div id="footer-links">
+                    <footer-lc>
+                        <img src="/instagram.svg" width="14" height="14" alt="instagram logo"/>
+                        <footer-link class="p-med">instagram</footer-link>
+                    </footer-lc>
+                    <footer-lc>
+                        <img src="/facebook.svg" width="8" height="17" alt="facebook logo"/>
+                        <footer-link class="p-med">facebook</footer-link>
+                    </footer-lc>
+                    <footer-lc>
+                        <img src="/vk.svg" width="20" height="12" alt="vkontakte logo"/>
+                        <footer-link class="p-med">vkontakte</footer-link>
+                    </footer-lc>
+                </div>
+            </div>
+        </footer>
+    </main>
 </div>
 </body>
 </html>
