fix inconsistencies, small errors, design discrepancies

--- a/index.html
+++ b/index.html
@@ -26,86 +26,86 @@
         <div id="nav-menu">
             <div id="nav-logo"></div>
             <div id="nav-links">
-                <nav-link class="p-med">Туры</nav-link>
-                <nav-link class="p-med">Создать тур</nav-link>
-                <nav-link class="p-med">Отзывы</nav-link>
-                <nav-link class="p-med">Истории</nav-link>
+                <span class="p-med nav-link">Туры</span>
+                <span class="p-med nav-link">Создать тур</span>
+                <span class="p-med nav-link">Отзывы</span>
+                <span class="p-med nav-link">Истории</span>
             </div>
-            <div id="phone-number" class="p-med">+7 999 999 99 99</div>
+            <span id="phone-number" class="p-med">+7 999 999 99 99</span>
         </div>
     </nav>
     <main>
         <div class="splash-ad">
-            <div id="splash-t1" class="t-h1">
+            <span id="splash-t1" class="t-h1">
                 Идеальные путешествия существуют
-            </div>
-            <div id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения
-                кадров</div>
+            </span>
+            <span id="splash-t2" class="p-med">Идейные соображения высшего порядка, а также рамки и место обучения
+                кадров</span>
             <button class="mat-button bt-small p-sm" id="splash-bt">Найти тур</button>
         </div>
         <div id="chooser-container">
-            <div class="t-h2 chooser-ad">Выбери свой тур</div>
+            <span class="t-h2 chooser-ad">Выбери свой тур</span>
             <div id="tabs">
-                <tab class="p-big" active>Популярные</tab>
-                <tab class="p-big">Авторские</tab>
-                <tab class="p-big">Походы</tab>
-                <tab class="p-big">Сплавы</tab>
-                <tab class="p-big">Велопрогулки</tab>
+                <span class="p-big tab" active>Популярные</span>
+                <span class="p-big tab">Авторские</span>
+                <span class="p-big tab">Походы</span>
+                <span class="p-big tab">Сплавы</span>
+                <span class="p-big tab  ">Велопрогулки</span>
             </div>
             <div id="chooser-cards">
-                <chooser-card>
+                <div class="chooser-card">
                     <div id="ch1" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
-                <chooser-card>
+                </div>
+                <div class="chooser-card">
                     <div id="ch2" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
-                <chooser-card>
+                </div>
+                <div class="chooser-card">
                     <div id="ch3" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
-                <chooser-card>
+                </div>
+                <div class="chooser-card">
                     <div id="ch4" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
-                <chooser-card>
+                </div>
+                <div class="chooser-card">
                     <div id="ch5" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
-                <chooser-card>
+                </div>
+                <div class="chooser-card">
                     <div id="ch6" class="chooser-back"></div>
                     <div class="chooser-content">
-                        <div class="t-h3 chooser-h">Путешествие в горы</div>
-                        <div class="p-sm chooser-p">от 80 000 руб</div>
+                        <span class="t-h3 chooser-h">Путешествие в горы</span>
+                        <span class="p-sm chooser-p">от 80 000 руб</span>
                         <button class="text-button chooser-bt p-big">Подробнее </button>
                     </div>
-                </chooser-card>
+                </div>
             </div>
         </div>
         <div id="maker-container">
-            <div class="t-h2 maker-ad">Собери свой тур</div>
-            <div class="p-med maker-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <span class="t-h2 maker-ad">Собери свой тур</span>
+            <span class="p-med maker-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</span>
             <form class="maker-form">
                 <div class="maker-field">
                     <label class="p-med" for="maker-name">Имя</label>
@@ -162,26 +162,26 @@
             </form>
         </div>
         <div id="reviews-container">
-            <div class="t-h2" id="reviews-ad">Отзывы наших путешественников</div>
-            <div class="p-med" id="reviews-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <span class="t-h2" id="reviews-ad">Отзывы наших путешественников</span>
+            <span class="p-med" id="reviews-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</span>
             <div id="reviews-cards">
                 <div class="reviews-card">
-                    <div class="p-big">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.</div>
+                    <span class="p-big">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции позволяет оценить значение модели развития.</span>
                     <div class="reviews-author">
                         <div class="reviews-name">
-                            <div class="t-h3">Мария</div>
-                            <div class="p-sm reviews-author-tour">Тур: Вдали от дома</div>
+                            <span class="t-h3">Мария</span>
+                            <span class="p-sm reviews-author-tour">Тур: Вдали от дома</span>
                         </div>
                         <div class="reviews-photo" id="reviews-author-1"></div>
                     </div>
                 </div>
                 <div class="reviews-card">
-                    <div class="p-big">Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
-                        <p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития.</p></div>
+                    <span class="p-big">Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+                        <p>Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Повседневная практика показывает, что реализация намеченных плановых заданий в значительной степени обуславливает создание модели развития.</p></span>
                     <div class="reviews-author">
                         <div class="reviews-name">
-                            <div class="t-h3">Павел</div>
-                            <div class="p-sm reviews-author-tour">Тур: Путешествие в горы</div>
+                            <span class="t-h3">Павел</span>
+                            <span class="p-sm reviews-author-tour">Тур: Путешествие в горы</span>
                         </div>
                         <div class="reviews-photo" id="reviews-author-2"></div>
                     </div>
@@ -189,8 +189,8 @@
             </div>
         </div>
         <div id="adventures-container">
-            <div class="t-h2" id="adventures-ad">Фотографии путешествий</div>
-            <div class="p-med" id="adventures-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <span class="t-h2" id="adventures-ad">Фотографии путешествий</span>
+            <span class="p-med" id="adventures-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</span>
             <div id="adventures-cards">
                 <div class="adventures-card adventures-card-odd-row" id="adventures-card-1"></div>
                 <div class="adventures-card adventures-card-odd-row" id="adventures-card-2"></div>
@@ -208,14 +208,14 @@
             </div>
         </div>
         <div id="stories-container">
-            <div class="t-h2" id="stories-ad">Истории путешествий</div>
-            <div class="p-med" id="stories-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</div>
+            <span class="t-h2" id="stories-ad">Истории путешествий</span>
+            <span class="p-med" id="stories-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</span>
             <div class="stories-cards">
                 <div class="stories-card">
                     <div class="stories-back" id="stories-card-1"></div>
                     <div class="stories-card-content">
-                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
-                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений:</div>
+                        <span class="t-h3 stories-card-h">Автостопом в Стамбул</span>
+                        <span class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений:</span>
                         <ul class="p-med stories-card-p">
                             <li>вкусная еда</li>
                             <li>дешевый транспорт</li>
@@ -224,9 +224,9 @@
                         <div class="stories-card-actions">
                             <button class="text-button stories-bt p-big">Подробнее </button>
                             <div class="stories-links">
-                                <div class="stories-link p-med">instagram</div>
-                                <div class="stories-link p-med">facebook</div>
-                                <div class="stories-link p-med">Youtube</div>
+                                <span class="stories-link p-med">instagram</span>
+                                <span class="stories-link p-med">facebook</span>
+                                <span class="stories-link p-med">Youtube</span>
                             </div>
                         </div>
                     </div>
@@ -234,13 +234,13 @@
                 <div class="stories-card">
                     <div class="stories-back" id="stories-card-2"></div>
                     <div class="stories-card-content">
-                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
-                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                        <span class="t-h3 stories-card-h">Автостопом в Стамбул</span>
+                        <span class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</span>
                         <div class="stories-card-actions">
                             <button class="text-button stories-bt p-big">Подробнее </button>
                             <div class="stories-links">
-                                <div class="stories-link p-med">instagram</div>
-                                <div class="stories-link p-med">ВКонтакте</div>
+                                <span class="stories-link p-med">instagram</span>
+                                <span class="stories-link p-med">ВКонтакте</span>
                             </div>
                         </div>
                     </div>
@@ -248,14 +248,14 @@
                 <div class="stories-card">
                     <div class="stories-back" id="stories-card-3"></div>
                     <div class="stories-card-content">
-                        <div class="t-h3 stories-card-h">Автостопом в Стамбул</div>
-                        <div class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</div>
+                        <span class="t-h3 stories-card-h">Автостопом в Стамбул</span>
+                        <span class="p-med stories-card-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании новых предложений</span>
                         <div class="stories-card-actions">
                             <button class="text-button stories-bt p-big">Подробнее </button>
                             <div class="stories-links">
-                                <div class="stories-link p-med">instagram</div>
-                                <div class="stories-link p-med">facebook</div>
-                                <div class="stories-link p-med">ВКонтакте</div>
+                                <span class="stories-link p-med">instagram</span>
+                                <span class="stories-link p-med">facebook</span>
+                                <span class="stories-link p-med">ВКонтакте</span>
                             </div>
                         </div>
                     </div>
@@ -265,26 +265,26 @@
         <div id="contacts-container">
             <div id="contacts-splash"></div>
             <div id="contacts-text">
-                <div class="t-h3" id="contacts-ad">Пора в путешествие вместе с нами!</div>
+                <span class="t-h3" id="contacts-ad">Пора в путешествие вместе с нами!</span>
                 <span class="p-med" id="contacts-p">Напиши на почту и узнай подробности на <span id="contacts-link">yourtour@gmail.com</span> </span>
             </div>
         </div>
         <footer>
             <div id="footer-menu">
-                <p id="footer-title" class="p-med">Наши социальные сети</p>
+                <span id="footer-title" class="p-med">Наши социальные сети</span>
                 <div id="footer-links">
-                    <footer-lc>
-                        <img src="/instagram.svg" width="14" height="14" alt="instagram logo"/>
-                        <footer-link class="p-med">instagram</footer-link>
-                    </footer-lc>
-                    <footer-lc>
-                        <img src="/facebook.svg" width="8" height="17" alt="facebook logo"/>
-                        <footer-link class="p-med">facebook</footer-link>
-                    </footer-lc>
-                    <footer-lc>
-                        <img src="/vk.svg" width="20" height="12" alt="vkontakte logo"/>
-                        <footer-link class="p-med">vkontakte</footer-link>
-                    </footer-lc>
+                    <div class="footer-lc">
+                        <div id="footer-logo-1" class="footer-logo"></div>
+                        <span class="p-med footer-link">telegram</span>
+                    </div>
+                    <div class="footer-lc">
+                        <div id="footer-logo-2" class="footer-logo"></div>
+                        <span class="p-med footer-link">facebook</span>
+                    </div>
+                    <div class="footer-lc">
+                        <div id="footer-logo-3" class="footer-logo"></div>
+                        <span class="p-med footer-link">vkontakte</span>
+                    </div>
                 </div>
             </div>
         </footer>
