--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="p-med nav-link">Отзывы</span>
                 <span class="p-med nav-link">Истории</span>
             </div>
-            <span id="phone-number" class="p-med">+7 999 999 99 99</span>
+            <a id="phone-number" class="p-med nav-link" href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
         </div>
     </nav>
     <main>
@@ -153,7 +153,7 @@
                     </fieldset>
                 </div>
                 <div class="maker-check-container">
-                    <input required type="checkbox"><span class="p-sm maker-span" style="color: #A6A6A6">Нажимая кнопку, я принимаю условия <span style="color: #000">Лицензионного договора</span></span>
+                    <input required type="checkbox"><span class="p-sm maker-span" id="maker-license-t">Нажимая кнопку, я принимаю условия <span id="maker-license-l">Лицензионного договора</span></span>
                 </div>
                 <div class="maker-bt-container">
                     <button id="maker-bt-1" class="mat-button maker-bt p-med">Найти тур</button>
@@ -266,7 +266,7 @@
             <div id="contacts-splash"></div>
             <div id="contacts-text">
                 <span class="t-h3" id="contacts-ad">Пора в путешествие вместе с нами!</span>
-                <span class="p-med" id="contacts-p">Напиши на почту и узнай подробности на <span id="contacts-link">yourtour@gmail.com</span> </span>
+                <span class="p-med" id="contacts-p">Напиши на почту и узнай подробности на <a id="contacts-link" href="mailto:yourtour@gmail.com">yourtour@gmail.com</a> </span>
             </div>
         </div>
         <footer>
