--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <div class="splash"></div>
     <nav>
         <div id="nav-menu">
-            <div id="nav-logo"></div>
+            <a id="nav-logo" href="#start"></a>
             <div id="nav-links">
-                <span class="p-med nav-link">Туры</span>
-                <span class="p-med nav-link">Создать тур</span>
-                <span class="p-med nav-link">Отзывы</span>
-                <span class="p-med nav-link">Истории</span>
+                <a class="p-med nav-link" href="#chooser-container">Туры</a>
+                <a class="p-med nav-link" href="#maker-container">Создать тур</a>
+                <a class="p-med nav-link" href="#reviews-container">Отзывы</a>
+                <a class="p-med nav-link" href="#stories-container">Истории</a>
             </div>
             <a id="phone-number" class="p-med nav-link" href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
         </div>
     </nav>
-    <main>
+    <main id="start">
         <div class="splash-ad">
             <span id="splash-t1" class="t-h1">
                 Идеальные путешествия существуют
@@ -121,23 +121,25 @@
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-email">Email</label>
-                    <input id="maker-email" required class="maker-input p-med" type="text" placeholder="example@mail.com"/>
+                    <input id="maker-email" required class="maker-input p-med" type="email" placeholder="example@mail.com"/>
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-phone">Телефон</label>
-                    <input id="maker-phone" required class="maker-input p-med" type="text" placeholder="+ 7 (___) ___-__-__"/>
+                    <input id="maker-phone" required class="maker-input p-med" type="tel" placeholder="+ 7 (___) ___-__-__"
+                           pattern="^\+?[0-9\s\-]{7,15}$"
+                           title="+7 (000) 000-00-00"/>
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-from">Дата от</label>
-                    <input id="maker-from" required class="maker-input p-med" type="text" placeholder="ДД.ММ.ГГГГ"/>
+                    <input id="maker-from" required class="maker-input p-med" type="date" placeholder="ДД.ММ.ГГГГ"/>
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-to">Дата до</label>
-                    <input id="maker-to" required class="maker-input p-med" type="text" placeholder="ДД.ММ.ГГГГ"/>
+                    <input id="maker-to" required class="maker-input p-med" type="date" placeholder="ДД.ММ.ГГГГ"/>
                 </div>
                 <div class="maker-line-field">
                     <label class="p-med" for="maker-com">Комментарий</label>
-                    <input id="maker-com" class="maker-input p-med" type="text"/>
+                    <textarea id="maker-com" class="maker-input p-med"></textarea>
                 </div>
                 <div class="maker-line-field">
                     <label class="p-med" for="maker-age">Вам есть 18 лет?</label>
@@ -156,8 +158,8 @@
                     <input required type="checkbox"><span class="p-sm maker-span" id="maker-license-t">Нажимая кнопку, я принимаю условия <span id="maker-license-l">Лицензионного договора</span></span>
                 </div>
                 <div class="maker-bt-container">
-                    <button id="maker-bt-1" class="mat-button maker-bt p-med">Найти тур</button>
-                    <button id="maker-bt-2" class="mat-button maker-bt p-med">Сбросить</button>
+                    <button id="maker-bt-1" class="mat-button maker-bt p-med" type="submit">Найти тур</button>
+                    <button id="maker-bt-2" class="mat-button maker-bt p-med" type="reset">Сбросить</button>
                 </div>
             </form>
         </div>
