adjust adventure card scaling

--- a/index.html
+++ b/index.html
@@ -197,20 +197,20 @@
             <span class="t-h2" id="adventures-ad">Фотографии путешествий</span>
             <span class="p-med" id="adventures-p">Идейные соображения высшего порядка, а также рамки и место обучения кадров</span>
             <div id="adventures-cards">
-                <div class="adventures-row">
+                <div class="adventures-row adventures-row-odd">
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-1"></div>
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-2"></div>
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-3"></div>
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-4"></div>
                 </div>
-                <div class="adventures-row">
+                <div class="adventures-row adventures-row-even">
                     <div class="adventures-card adventures-card-even-row" id="adventures-card-5"></div>
                     <div class="adventures-card adventures-card-even-row" id="adventures-card-6"></div>
                     <div class="adventures-card adventures-card-even-row" id="adventures-card-7"></div>
                     <div class="adventures-card adventures-card-even-row" id="adventures-card-8"></div>
                     <div class="adventures-card adventures-card-even-row" id="adventures-card-9"></div>
                 </div>
-                <div class="adventures-row">
+                <div class="adventures-row adventures-row-odd">
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-10"></div>
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-11"></div>
                     <div class="adventures-card adventures-card-odd-row" id="adventures-card-12"></div>
