--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-from">Дата от</label>
-                    <input id="maker-from" required class="maker-input p-med" type="text" placeholder="dd.mm.yyyy"/>
+                    <input id="maker-from" required class="maker-input p-med" type="text" placeholder="ДД.ММ.ГГГГ"/>
                 </div>
                 <div class="maker-field">
                     <label class="p-med" for="maker-to">Дата до</label>
-                    <input id="maker-to" required class="maker-input p-med" type="text" placeholder="dd.mm.yyyy"/>
+                    <input id="maker-to" required class="maker-input p-med" type="text" placeholder="ДД.ММ.ГГГГ"/>
                 </div>
                 <div class="maker-line-field">
                     <label class="p-med" for="maker-com">Комментарий</label>
